# Mutemaanpa-game

./: .editorconfig  .gitignore  Cargo.toml  README.md  ROADMAP.md
assets/: .gitattributes
assets/language/: test.ftl
assets/language/en/: classes-en-US.ftl  classes.ftl  manifest.yaml  prologue.ftl
assets/language/zh-CN/: manifest.yaml  prologue.ftl
assets/language/zh-cn/: classes.ftl  manifest.yaml
assets/script/: prologue.ls
crates/mutemaanpa-godot/: Cargo.toml
crates/mutemaanpa-lib/src/: game_state.rs
crates/mutemaanpa-lib/src/data/repository/: mod.rs  script.rs  text.rs
crates/mutemaanpa-lib/src/data/source/: language.rs  mod.rs  script.rs
crates/mutemaanpa-lib/src/gameplay/: script.rs
crates/mutemaanpa-lib/src/setting/: gameplay.rs  mod.rs
crates/mutemaanpa-tty/src/: main.rs
godot/: icon.svg.import  mutemaanpa.gdextension  project.godot  title.tscn
mutemaanpa-godot/src/: lib.rs
mutemaanpa-lib/: Cargo.toml
mutemaanpa-lib/src/: class.rs  game_state.rs  i18n.rs  lib.rs  loader.rs
mutemaanpa-lib/src/data/: mod.rs
mutemaanpa-lib/src/data/repository/: text.rs
mutemaanpa-lib/src/data/source/: language.rs  mod.rs
mutemaanpa-lib/src/gameplay/: class.rs  mod.rs  script.rs
mutemaanpa-lib/src/setting/: language.rs  mod.rs
mutemaanpa-tty/: Cargo.toml
mutemaanpa-tty/src/: main.rs
rust/: Cargo.toml
rust/src/: lib.rs
