[package]
name = "mutemaanpa-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mutemaanpa_lib"

[dependencies]
# Resource management
assets_manager = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-lexpr = "0.1.3"

# i18n
fluent = "0.16.0"
fluent-bundle = {git = "https://github.com/projectfluent/fluent-rs.git", branch = "main"}
unic-langid = {version = "0.9.1", features = ["unic-langid-macros"]}
intl-memoizer = { git = "https://github.com/projectfluent/fluent-rs.git", branch = "main"}

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Error handling
anyhow = "1"
